# gcn3-ocl-bindings

./: .gitignore  README.md  build_ocl_frontend.sh
examples/AES-OpenCL/: Makefile  key.txt  main  main_ocl12.c  myfirstkernel.hsaco
examples/ViennaCL-1.7.1/cmake/: FindOpenCL.cmake
examples/vector-add/: Makefile  myfirstkernel.hsaco  vecAdd.c
libsim-go/: Makefile  libsim-go  ocl.go  ocl.h  sample-config.json  unibuild.sh
libsim-go/_obj/: _cgo_export.c  _cgo_export.h  _cgo_gotypes.go  _cgo_main.c  ocl.cgo1.go  ocl.cgo2.c
libsim-ocl/: CMakeLists.txt  libsim-ocl.c  libsim-ocl.h
